--- a/custom_components/svk_mimer/translations/en.json
+++ b/custom_components/svk_mimer/translations/en.json
@@ -7,7 +7,10 @@
                 "data": {
                     "kw_available": "Specify how many KW you have available in your battery",
                     "fee_percent": "Specify how many % your provider takes in fee",
-                    "vat": "Include VAT in prices"
+                    "vat": "Include VAT in prices",
+                    "monitor_fcr_n": "Monitor FCR-N",
+                    "monitor_fcr_d_down": "Monitor FCR-D Down",
+                    "monitor_fcr_d_up": "Monitor FCR-D Down"
                 }
             }
         },
@@ -22,7 +25,10 @@
                 "data": {
                     "kw_available": "Specify how many KW you have available in your battery",
                     "fee_percent": "Specify how many % your provider takes in fee",
-                    "vat": "Include VAT in prices"
+                    "vat": "Include VAT in prices",
+                    "monitor_fcr_n": "Monitor FCR-N",
+                    "monitor_fcr_d_down": "Monitor FCR-D Down",
+                    "monitor_fcr_d_up": "Monitor FCR-D Down"
                 }
             }
         }
